--- a/projet_app_web_commerce/WebContent/resources/style/Panier.css
+++ b/projet_app_web_commerce/WebContent/resources/style/Panier.css
@@ -14,14 +14,38 @@
 	margin: auto;
 }
 
-.produit-grille-description {
+.produit-nom-ligne-commande {
+	text-transform : uppercase;
+	font-weight : bold;
+	float: left;
+	padding: 0;
+	margin: auto;
+}
+
+.produit-image-conteneur-ligne-commande{
+	float: left;
+	padding: 0;
+}
+
+.produit-image-ligne-commande{
+	width:30rem;
+	height:22.5rem;
+	text-align: center;
+	margin-top: 0.5rem;
+}
+
+.produit-id {
 	text-align: justify;
 	margin-left: 1rem
+	
 }
 
 
 .produit-resume {
 	padding: 0; 
+	margin-left : 35rem;
+	margin-top: 5rem;
+
 	
 }
 
@@ -38,7 +62,6 @@
 	padding: 0; 
 	width: 20% ;
 	margin-top: 4rem;
-	
 }
 
 .grid-bouton-enfant {
